Fix gap in keypad

--- a/styles/css/calculator.css
+++ b/styles/css/calculator.css
@@ -539,11 +539,9 @@ main {
   left: 0.3125rem;
 }
 .switch__radio:nth-of-type(2):checked ~ .switch__ball {
-  background: chocolate;
   left: 38%;
 }
 .switch__radio:nth-of-type(3):checked ~ .switch__ball {
-  background: tomato;
   left: calc(100% - 16px - 5px);
 }
 
@@ -562,7 +560,7 @@ main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  gap: 0.8125rem;
+  gap: 1.5625rem;
   border-radius: 0.625rem;
   background: var(--keypad-bg-color);
   padding: 1.5rem;
@@ -580,7 +578,8 @@ main {
   justify-content: center;
   gap: 1.5rem;
   padding: 1.75rem 1.5rem 1.9375rem 1.5rem;
-  width: min(100%, 36.75rem);
+  width: 100%;
+  max-width: 33.75rem;
   height: auto;
   /*
   @media screen and (min-width: 728px) {
