--- a/styles/scss/components/_calculator.scss
+++ b/styles/scss/components/_calculator.scss
@@ -5,7 +5,8 @@
     gap: 1.5rem;
 
     padding: 1.75rem 1.5rem 1.9375rem 1.5rem;
-    width: min(100%, 36.75rem);
+    width: 100%;
+    max-width: 33.75rem;
     height: auto;
 
     
