--- a/styles/scss/components/_keypad.scss
+++ b/styles/scss/components/_keypad.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    gap: 0.8125rem;
+    gap: 1.5625rem;
      
     border-radius: 0.625rem;
 
